--- a/travel.html
+++ b/travel.html
@@ -37,7 +37,7 @@
             <td>South Africa, officially the Republic of South Africa, is the southernmost country in Africa. It is bounded to the south by 2,798 kilometres (1,739 mi) of coastline that stretches along the South Atlantic and Indian Oceans;[14][15][16] to the north by the neighbouring countries of Namibia, Botswana, and Zimbabwe; and to the east and northeast by Mozambique and Eswatini. It also completely enclaves the country Lesotho.[17] It is the southernmost country on the mainland of the Old World, and the second-most populous country located entirely south of the equator, after Tanzania. South Africa is a biodiversity hotspot, with unique biomes, plant and animal life. With over 62 million people, </td>
         </tr>
         <tr>
-            <th>IMAGE</th>
+            <th>IMAGES</th>
             <td>
                 <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158857.8398860833!2d-0.26640172818384816!3d51.528739805213974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sng!4v1706289489992!5m2!1sen!2sng" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </td>
